20090704	Moving thirdparty includes into src/include/thirdparty/.
20090705	Beginning to import various Components from the experimental
		C++ branch (starting with the MVME187Machine).
		Removing more bogus/unfinished code: Bebox and Luna88k.
		Attempting to move in more code from the experimental C++
		branch: the GXemul main class, command interpreter and related
		commands, file loader, UIs, etc.
20090710	Moving in more code.
		Added a note in guestoses.html that all current modes are
		legacy modes, using the old framework.
		Updating the OpenBSD/landisk regression test expect script
		from 4.1 to 4.5.
		Attempting to connect -V and -e so that the new framework is
		used for new template machines.
		Making everything build on Linux (missing includes etc.).
		Removing all $CC stuff from configure (only $CXX remains).
		Merging in the automated component and machine HTML
		documentation stuff from the C++ branch.
		Applying a patch from Izumi Tsutsui which makes NetBSD/hpcmips
		work well with the clock again.
20090711	Applying another patch from Izumi Tsutsui, for setting the
		ARCBIOS OSLOADPARTITION environment variable in a more correct
		way. (Also updating the guest OS page for NetBSD/arc 5.0.)
		Updating the NetBSD/pmax regression test expect scripts from
		3.1 to 5.0 (for both R3000 and R4400).
		Moving regression test expect scripts to the test/ directory.
		Creating a regression test expect script for NetBSD/arc 5.0.
20090712	Adding a dummy "testm88k" machine for the new framework.
		Updating the install instructions for NetBSD/cobalt to use the
		RAMDISK installer (thanks to Izumi Tsutsui for noticing).
20090713	Beginning on an a.out FileLoader for the new framework.
20090714	Continuing on the a.out FileLoader.
20090716	a.out (big-endian only so far) can now be loaded into
		AddressDataBus objects.
		Modifying the "load" command so that it can load both component
		trees _and_ other binaries (ELFs etc) into components.